<?xml version="1.0"?>
<package>
  <name>teleop_twist_keyboard_tests</name>
  <version>1.0.1</version>
  <description>Testes de modificações ao TELEOP.</description>

  <maintainer email="josesantos.epa@gmail.com">EPA</maintainer>

  <license>BSD</license>

  <url type="website">http://wiki.ros.org/teleop_twist_keyboard</url>

  <author>José Santos</author>

  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>rospy</run_depend>
</package>
